# protosvit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
configs/: train.yaml
configs/callbacks/: early_stopping.yaml  no_validation.yaml
configs/data/: NIH.yaml  RSNA.yaml  aptos.yaml  cifar.yaml  colon_image.yaml  cub.yaml  flowers.yaml  funny_birds.yaml  isic.yaml  lung_image.yaml  mnist.yaml  mura.yaml  pcam.yaml  pets.yaml  stanford_cars.yaml
configs/experiment/: classification_prototype.yaml
configs/experiment/ablation/: classification_prototype_L1.yaml  classification_prototype_L1_cars.yaml  classification_prototype_L1_pets.yaml  classification_prototype_no_prototypical.yaml  (+2 more)
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: classification_prototype.yaml  classification_prototype_clip.yaml  classification_prototype_medclip.yaml  classification_prototype_radio.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  ddp_sim.yaml  default.yaml
data/isic_2019/: split.csv
data/rsna-pneumonia-detection-challenge/: split.csv
src/: main_train.py
src/evaluation/: interpretability_metrics.py  main_evaluate_funny_birds.py
src/evaluation/funny_birds/: plot_results.py  (+1 more)
src/notebooks/: consistency_funny_birds.ipynb  create_split_rsna.ipynb  extract_correlation_matrix.ipynb  plot_proto_comparison.ipynb  plot_proto_funny_birds_intervention.ipynb  plot_prototypes.ipynb  save_resulty.ipynb
src/shared_utils/: __init__.py  rich_utils.py  tensorboard_launcher.py  utils.py  utils_experiments.py  utils_training.py  utils_visualisation.py
(+48 files in other folders)
